Fixes alignment of featured section

--- a/_sass/homepage/_featured-section.scss
+++ b/_sass/homepage/_featured-section.scss
@@ -1,5 +1,4 @@
 .featured-section {
-  padding: 20px;
   margin-bottom: 18px;
 }
 
@@ -46,18 +45,16 @@
     height: auto;
   }
 
-  width: 25%;
+  width: 30%;
   max-height: 660px;
   margin-left: 42px;
 
   .upper {
-    margin-bottom: 40px;
-
     &:after {
       content: '';
       width: 100%;
       display: block;
-      margin: auto;
+      margin: 35px auto;
       border-bottom: 1px solid $grey-color-light;
     }
   }
@@ -69,11 +66,10 @@
 
   h2:after {
     content: '';
-    position: absolute;
     border-bottom: 1px solid $grey-color-dark;
-    top: 48px;
-    width: 25%;
-    left: 38%;
+    width: 5em;
+    display: block;
+    margin: 10px auto;
   }
 }
 
@@ -82,7 +78,6 @@
   line-height: 1;
   font-weight: 800;
   text-align: center;
-  padding: 20px;
   color: $grey-color-dark;
   text-transform: uppercase;
 }
